# alacrema

./: Cargo.toml  README.md
alacrema-demo/: Cargo.toml
alacrema-demo/src/: main.rs  ui.aml
canvas-effects/: Cargo.toml  README.md
canvas-effects/src/: canvasFX.aml  main.rs  ui.aml
fizzle/: Cargo.toml
fizzle/src/: canvasfx.aml  main.rs  statusfeed.aml  statusline.aml  ui.aml
