[package]
name = "alacrema-demo"
description = "proof of concept for alacrema"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
anyhow = "1.0.100"
smol = "2.0.2"
rand = "0.9.2"
futures = "0.3.31"
portable-pty = "0.9.0"

[dependencies.anathema]
version = "0.2.11"
# git = "https://github.com/togglebyte/anathema.git"

#   .o.     .oOo.       .o.
# /+-----------------------+\
# |ideas that did not remain|
# \+-----------------------+/   .
#   n        |||    _          . .
#  (  .  p   |||   A \.  t   .  .
# .).,|_.o,.[===].._.,|.,|,  ..<>,

# rustix = { workspace = true }
# bytes = { workspace = true }
# vt100 = { workspace = true }
# tokio = { workspace = true }
# tokio = "1.48.0"
# smol = "2.0.2"
